--- a/pages/users/UsersPage.module.css
+++ b/pages/users/UsersPage.module.css
@@ -1,6 +1,9 @@
 .container {
   display: flex;
-  padding: 5%;
+  padding-left: 5%;
+  padding-right: 4%;
+  padding-top: 5%;
+  padding-bottom: 5%;
   flex-direction: column;
 }
 .familyCards {
